WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201878
WebSWServerConnection does not need to store a sessionID
https://bugs.webkit.org/show_bug.cgi?id=201878
Summary
WebSWServerConnection does not need to store a sessionID
Chris Dumez
Reported
2019-09-17 12:06:21 PDT
WebSWServerConnection does not need to store a sessionID, it can simply get it from its SWServer.
Attachments
Patch
(6.95 KB, patch)
2019-09-17 12:07 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-17 12:07:26 PDT
Created
attachment 378977
[details]
Patch
Geoffrey Garen
Comment 2
2019-09-17 13:28:05 PDT
Comment on
attachment 378977
[details]
Patch r=me
Chris Dumez
Comment 3
2019-09-17 13:49:04 PDT
Comment on
attachment 378977
[details]
Patch Clearing flags on attachment: 378977 Committed
r249979
: <
https://trac.webkit.org/changeset/249979
>
Chris Dumez
Comment 4
2019-09-17 13:49:06 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-09-17 13:53:17 PDT
<
rdar://problem/55452320
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug